correct spacing and animations

--- a/app/Homepage/css/projects/projectinfo.css
+++ b/app/Homepage/css/projects/projectinfo.css
@@ -24,8 +24,29 @@
   flex-direction: column;
   align-items: flex-end;
   overflow-y: hidden;
+  text-align: right;
 }
 
 .projects-content-right {
   width: 33%;
+}
+
+.middleleft {
+  margin-top: 40%;
+}
+.bottomleft {
+  margin-top: 25%;
+}
+
+.idea {
+  margin-top: 30%;
+  height: 50%;
+}
+
+.ideabody {
+  text-wrap: pretty;
+}
+
+.bottommiddle {
+  margin-top: 20%;
 }
